--- a/Contact-form.html
+++ b/Contact-form.html
@@ -45,15 +45,15 @@
 			</div>
 			<div class="details">
 				<h3> Contact info </h3>
-				<p> E-mail: niloy.swe@gmail.com</p>
-				<p> Mobile: +8801756770501 </p>
-				<p> web: about.me/niloy-biswas </p>
+				<p> E-mail: quanglinhhee2001@gmail.com</p>
+				<p> Mobile: +964819945 </p>
+				<p> web: abc/bca </p>
 			</div>
 			<div class="details"> 
 				<h3> Working hours: 9am-4pm </h3>
 				<p> E-mail: mahi@gmail.com</p>
-				<p> Mobile: +8801824141501 </p>
-				<p> web: about.me/mahi.swe </p>
+				<p> Mobile: +123456789 </p>
+				<p> web: about.me </p>
 			</div>			
 		</div>	
 	</div>
