--- a/Contact-form.html
+++ b/Contact-form.html
@@ -29,6 +29,7 @@
 		
 		<div class="Contact-Form">
 			<h1> Contact</h1>
+			<h2> Xin chao cac ban</h2>
 			<h3>Contact for best Design</h3>
 			<div class="input-fields">
 				<input type="text" class="input" placeholder="Your Name *">
